--- a/app/src/main/res/layout/row_game.xml
+++ b/app/src/main/res/layout/row_game.xml
@@ -53,6 +53,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="-"
+                        style="@style/AppTheme.Button.GameAction"
                         android:visibility="invisible"/>
 
                     <TextView
@@ -68,6 +69,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        style="@style/AppTheme.Button.GameAction"
                         android:text="+"
                         android:visibility="invisible"/>
 
@@ -128,6 +130,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="-"
+                        style="@style/AppTheme.Button.GameAction"
                         android:visibility="invisible"/>
 
                     <TextView
@@ -143,6 +146,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        style="@style/AppTheme.Button.GameAction"
                         android:text="+"
                         android:visibility="invisible"/>
 
