--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,9 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="AppTheme.Button.GameAction" parent="Base.Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:background">@drawable/selector_button_ring</item>
+        <item name="android:textColor">@color/backgroundSignin</item>
+    </style>
+
 </resources>
