--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -82,7 +82,8 @@
                     android:id="@+id/button_signin"
                     style="@style/AppTheme.Button.SignIn"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
                     android:text="@string/button_sign_in"
                     android:textStyle="bold" />
@@ -90,11 +91,11 @@
                 <com.facebook.login.widget.LoginButton
                     android:id="@+id/login_button"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="30dp"
-                    android:layout_weight="0.20" />
+                    android:layout_weight="0.13" />
 
             </LinearLayout>
 
