--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_splash_profeta"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -52,7 +53,7 @@
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:textColorHint="@color/gray"
-                        android:textColor="@color/backgroundSignin" />
+                        android:textColor="@color/white" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -74,15 +75,15 @@
                         android:inputType="textPassword"
                         android:maxLines="1"
                         android:textColorHint="@color/gray"
-                        android:textColor="@color/backgroundSignin" />
+                        android:textColor="@color/white" />
 
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
                     android:id="@+id/button_signin"
-                    style="@style/AppTheme.Button.SignIn"
+                    style="@style/AppTheme.Button.GameAction"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
                     android:text="@string/button_sign_in"
@@ -91,7 +92,7 @@
                 <com.facebook.login.widget.LoginButton
                     android:id="@+id/login_button"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
                     android:layout_marginBottom="30dp"
