--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#fff</color>
+    <color name="colorAccent">#040e97</color>
 
     <color name="white">#FFFFFF</color>
     <color name="yellow">#fff200</color>
