--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -81,7 +81,7 @@
 
                 <Button
                     android:id="@+id/button_signin"
-                    style="@style/AppTheme.Button.GameAction"
+                    style="@style/AppTheme.Button.SignIn.Ring"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
