--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,12 @@
     tools:showIn="@layout/app_bar_main">
 
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_share"
+        android:text="SHARE"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_games"
         android:layout_width="wrap_content"
