--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_splash_profeta"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -52,8 +51,8 @@
                         android:hint="@string/hint_username"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
-                        android:textColorHint="@color/gray"
-                        android:textColor="@color/white" />
+                        android:textColorHint="@color/com_facebook_blue"
+                        android:textColor="@color/backgroundSignin" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -74,8 +73,8 @@
                         android:hint="@string/hint_password"
                         android:inputType="textPassword"
                         android:maxLines="1"
-                        android:textColorHint="@color/gray"
-                        android:textColor="@color/white" />
+                        android:textColorHint="@color/com_facebook_blue"
+                        android:textColor="@color/backgroundSignin" />
 
                 </android.support.design.widget.TextInputLayout>
 
