--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
 
     <style name="AppTheme.Button.SignIn.Ring" parent="Base.Widget.AppCompat.Button.Borderless.Colored">
         <item name="android:background">@drawable/selector_button_ring</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/backgroundSignin</item>
     </style>
 
     <style name="AppTheme.Button.GameAction" parent="Base.Widget.AppCompat.Button.Borderless.Colored">
