--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button_share"
+        android:id="@+id/button_share_profeta"
         android:text="SHARE"/>
 
     <android.support.v7.widget.RecyclerView
