--- a/app/src/main/res/menu/action_toolbar.xml
+++ b/app/src/main/res/menu/action_toolbar.xml
@@ -2,14 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <!-- "Mark Favorite", should appear as action button if possible -->
     <item
-        android:id="@+id/action_favorite"
-        android:icon="@drawable/ic_menu_manage"
-        android:title="@string/app_name"
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_share"
+        android:title="@string/action_share"
         app:showAsAction="ifRoom"/>
-
-
-
 </menu>
