--- a/app/src/main/res/layout/row_game.xml
+++ b/app/src/main/res/layout/row_game.xml
@@ -16,6 +16,26 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/linearlayout_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingTop="@dimen/activity_vertical_margin">
+
+            <TextView
+                android:id="@+id/textview_label_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:textAlignment="center"
+                tools:text="Arena Allianz Parque" />
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:id="@+id/linearlayout_game"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -161,27 +181,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearlayout_game"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:paddingTop="@dimen/activity_vertical_margin">
-
-            <TextView
-                android:id="@+id/textview_label_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:textAlignment="center"
-                tools:text="Arena Allianz Parque" />
 
             <TextView
                 android:id="@+id/textview_label_stadium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                tools:text="Arena Allianz Parque" />
+                android:text="@string/stadium_more"
+                android:textAlignment="textEnd"
+                android:textColor="@color/link"
+                tools:text="+ STADIUM" />
 
         </LinearLayout>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
