--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="gray">#d1d1d1</color>
     <color name="red">#ff0000</color>
     <color name="backgroundSignin">#010e56</color>
+    <color name="link">#0000FF</color>
 
 
 </resources>
